# Starman

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: rust.yml
assets/completions/: _starman.ps1  starman.bash  starman.elv  starman.fish  starman.zsh
crates/starman/: Cargo.toml  README.md
crates/starman/assets/shell/: starman-user.snippet
crates/starman/examples/: generate_completions.rs
crates/starman/src/: cli.rs  config.rs  create_user.rs  doctor.rs  i18n.rs  lib.rs  logging.rs  main.rs  quota.rs  shell_snippet.rs  tui.rs
examples/: pkgmgr-demo.sh  pkgmgr-test.sh  test-space.sh  tui-demo.sh  tui-env-demo.sh
installers/: bootstrap.sh  install.sh  install.sh.test  test-installers.sh
scripts/: docker-build-starman.sh  gen-starman-completions.sh
scripts/lib/: banners.txt  common.sh  pkgmgr.sh  starman_state.sh  tui.sh
scripts/steps/: brew.sh  disk_lab.sh  mihomo.sh  packages.sh  ssh.sh
scripts/vm/: attach-ubuntu-data-disk.sh  backup-vm.sh  detach-ubuntu-data-disk.sh  restore-vm.sh
templates/: bash.min.snippet  tmux.min.snippet  vim.min.snippet  vimrc_singlefile
templates/mihomo/: config.yaml
templates/ssh/: sshd_snippet.conf
tests/: test-disk-lab-syntax.sh  test-tui-enter-local.sh  test-tui-menu-tmux.sh  tui-menu-test.sh
tests/vm-test/: README.md  USAGE.md  setup.sh  test-install-root-flow.sh  test-tmux-feasibility.sh  test-tui-enter-fix.sh  test-tui-enter-key.sh  test-tui-simple.sh
tests/vm-test/scenarios/: root-install-guard-test.sh  root_user_guide.sh  starman-cli-smoke.sh  starman-completion-smoke.sh  (+4 more)
(+11 files in other folders)
