[package]
name = "starman"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Starman server management CLI"
[[bin]]
name = "starman"
path = "src/main.rs"

[lib]
name = "starman"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
anyhow = "1"
# Pin below 4.5 to avoid transitive crates requiring Rust 1.85+ / edition2024 (broader distro compatibility).
clap = { version = "=4.4.18", features = ["derive", "cargo", "string"] }
clap_complete = "=4.4.10"
crossterm = "0.28"
dirs = "5"
ratatui = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
